# controllers/surveys/expressHandler.js
@@ -11,6 +11,27 @@ class ExpressHandler {
     this.submitSurveyRequesthandler = this.submitSurveyRequesthandler.bind(this);
     this.getSurveyRequesthandler = this.getSurveyRequesthandler.bind(this);
     this.getSurveyResulthandler = this.getSurveyResulthandler.bind(this);
+    this.getSurveyQuestionshandler = this.getSurveyQuestionshandler.bind(this);
+  }
+
+  async getSurveyQuestionshandler(req, res) {
+    const correlationId = req.correlationId();
+    const logger = new Logger(correlationId, 'getSurveyQuestionshandler-expressHandler', 'getSurveyQuestionshandler');
+    logger.info('Entry');
+    try {
+      const correlationId = req.correlationId();
+      let handlerRes = await this.survey.getSurveyQuestions(req.query.surveyId, correlationId);
+      res.set({ 'content-type': 'application/json' });
+      res.status(200).send(handlerRes);
+    } catch (err) {
+      if (err.status && err.message) {
+        res.status(err.status).send({ message: err.message });
+      } else if (err.message) {
+        res.status(400).send({ message: err.message }); // JOI validation error
+      } else {
+        res.status(500).send({ message: 'Unexpected error' });
+      }
+    }
   }
 
   async getSurveyResulthandler(req, res) {
